[32wffg3] Git Workflow tool

--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,9 @@ deps =
     -rrequirements-dev.txt
 
 commands =
-    python test.py
+    pytest
+
+[pytest]
+addopts = -ra -q
+testpaths =
+    tests
