--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,9 @@
 universal=1
 
 [flake8]
-max-line-length=120
+max-line-length=130
 ignore: W503, E203
+
+[tool:pytest]
+addopts = -ra -q
+testpaths = tests
