--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,9 @@ jobs:
     strategy:
       matrix:
         python:
-        - "3.6"
-        - "3.7"
         - "3.8"
         - "3.9"
+        - "3.10"
 
     runs-on: ubuntu-latest
 
@@ -44,9 +43,10 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools wheel
         python -m pip install -r requirements.txt
+        python -m pip install -r requirements-dev.txt
 
     - name: Run tests
-      run: python setup.py test
+      run: pytest tests
 
   all_done:
     name: Tests done
