[863g12v1q] Configure build using setup.cfg - Entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,10 @@ exclude =
     examples
     tests
 
+[options.entry_points]
+console_scripts =
+    aw = alkemy_workflow.cli:main
+
 [options.extras_require]
 test = pytest
 
