[861mbrv6p] Add support for Microsoft Planner - fix requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,8 @@ install_requires =
     click
     importlib-resources
     pzp
+    O365>=2.0.26
+    portalocker
 
 [options.packages.find]
 include = alkemy_workflow*
